COMMERCE-1757 minium dropdown z-index fixed

--- a/commerce-theme-speedwell/commerce-theme-speedwell/src/css/_overrides.scss
+++ b/commerce-theme-speedwell/commerce-theme-speedwell/src/css/_overrides.scss
@@ -42,3 +42,7 @@ img {
 	width: 80px;
 }
 }
+
+.dropdown-menu {
+	z-index: 1200;
+}
